mt4-trading-api/k8s-cluster/apps/real01/mt4-trading-api-margincall-real01-deployment.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mt4-trading-api-margincall-real01
  namespace: mt4-trading-api-real01
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mt4-trading-api-margincall-real01
        env: mt4-trading-api-real01
    spec:
      containers:
      - name: mt4-trading-api-margincall-real01
        image: '559845540357.dkr.ecr.eu-west-2.amazonaws.com/mt4-trading-api:web-real02-ae7e4854-4'
        resources:
          limits:
            cpu: 500m
            memory: 2000Mi
          requests:
            cpu: 400m
            memory: 1000Mi
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: envfile
          mountPath: "/opt/application/.env"
          subPath: mt4-trading-api-margincall-real01.properties
      volumes:
      - name: envfile
        configMap:
          name: mt4-trading-api-margincall-real01
