mt4-trading-api/k8s-cluster/apps/real01/mt4-trading-api-web-real01-deployment.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mt4-trading-api-web-real01
  namespace: mt4-trading-api-real01
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mt4-trading-api-web-real01
    spec:
      containers:
      - name: mt4-trading-api-web-real01
        image: '559845540357.dkr.ecr.eu-west-2.amazonaws.com/mt4-api/test:mt4-trading-api-server-staging15'
        resources:
          limits:
            cpu: 300m
            memory: 200Mi
          requests:
            cpu: 200m
            memory: 100Mi
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: envfile
          mountPath: "/opt/application/.env"
          subPath: mt4-trading-api-web-real01.env
      volumes:
      - name: envfile
        configMap:
          name: mt4-trading-api-web-real01
