mt4-trading-api/k8s-cluster/apps/real01/mt4-trading-api-web-real01-kube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mt4-trading-api-web-real01
  namespace: mt4-trading-api-real01
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: mt4-trading-api-web-real01
