mt4-trading-api/k8s-cluster/apps/real01/mt4-trading-api-web-real01-ingress.yaml
apiVersion: extensions/v1beta1  
kind: Ingress  
metadata:  
  name: mt4-trading-api-web-real01
  namespace: mt4-trading-api-real01
  annotations:
        nginx.ingress.kubernetes.io/affinity: "cookie"
        nginx.ingress.kubernetes.io/session-cookie-name: "INGRESSCOOKIE"
        nginx.org/websocket-services: "mt4-trading-api-web-real01"

spec:  
  rules:
  - host: mt4-api.bdswiss.com
    http:
      paths:
      - backend:
          serviceName: mt4-trading-api-web-real01
          servicePort: 80
        path: /
  - host: mt4-api-real01.bdswiss.com
    http:
      paths:
      - backend:
          serviceName: mt4-trading-api-web-real01
          servicePort: 80
        path: /
